--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,11 @@
 			<!-- 通过全局属性引用这个mysql的版 本 -->
 			<version>${mysql.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-context</artifactId>
+			<version>5.3.26</version>
+		</dependency>
 	</dependencies>
 
 	<build>
